APP 专题组和专题的开发

--- a/app/scripts/views/biz/act/update.html
+++ b/app/scripts/views/biz/act/update.html
@@ -431,7 +431,7 @@
                         <div class="form-group" ng-show="param.gift_buy==1&&param.gift_promotion_type==1">
                             <div class="form_element">
                                 <label class="col-sm-2 control-label">设置折扣<span
-                                    class="form_label_dangus">*</span></label>
+                                    class="form_label_danger">*</span></label>
                                 <div class="col-sm-2">
                                     <input class="form-control text-right" ng-model="gift_discount"
                                            ng-blur="reset_gift_discount()"
