--- a/app/scripts/views/biz/cctalk_info/sendsms.html
+++ b/app/scripts/views/biz/cctalk_info/sendsms.html
@@ -8,7 +8,7 @@
                 <div class="panel panel-primary">
                     <div class="panel-body">
                         <div class="form-group">
-                            <label class="col-sm-2 control-label">查询<span class="form_label_dangus">*</span></label>
+                            <label class="col-sm-2 control-label">查询<span class="form_label_danger">*</span></label>
                             <div class="col-sm-8 form-group">
                                 <div class="col-sm-2">
                                     <input class="form-control" ng-model="mobile" placeholder="手机号码">
@@ -31,7 +31,7 @@
 
                         <div class="form-group">
                             <label class="col-sm-2 control-label">邀请码<span
-                                    class="form_label_dangus"></span></label>
+                                    class="form_label_danger"></span></label>
                             <div class="col-sm-8">
                                 <p class="form-control"
                                    style="background-color: #eee;min-height: 34px;height: auto;word-break: break-word;"
