--- a/app/scripts/views/biz/lessons/update.html
+++ b/app/scripts/views/biz/lessons/update.html
@@ -54,7 +54,7 @@
                         <div form-date-time text="课程开始时间" ng-model="param.pubtime_at" required="true"></div>
                         <div class="form-group">
                             <label class="col-sm-2 control-label">每周任务发布时间<span
-                                    class="form_label_dangus">*</span></label>
+                                    class="form_label_danger">*</span></label>
                             <div class="col-sm-8">
                                 <table class="table table-bordered table-striped">
                                     <thead>
@@ -122,7 +122,7 @@
                         </div>
                         <!--<div class="form-group">-->
                         <!--<label class="col-sm-2 control-label">关联活动-->
-                        <!--<span class="form_label_dangus">*</span></label>-->
+                        <!--<span class="form_label_danger">*</span></label>-->
                         <!--<div class="col-sm-2">-->
                         <!--<input class="form-control" ng-model="product_id" placeholder="活动ID"-->
                         <!--required="true">-->
