--- a/app/scripts/views/biz/orders/update.html
+++ b/app/scripts/views/biz/orders/update.html
@@ -12,7 +12,7 @@
                     <div class="panel-body">
                         <h4>维护订单数据</h4>
                         <label class="col-sm-2 control-label">活动ID<span
-                                class="form_label_dangus">*</span></label>
+                                class="form_label_danger">*</span></label>
                         <div class="col-sm-6">
                             <input class="form-control" ng-model="param.product_id"
                                    placeholder="填写活动ID后点击查询" required>
