--- a/app/scripts/views/biz/support/opencities.html
+++ b/app/scripts/views/biz/support/opencities.html
@@ -15,7 +15,7 @@
                         <div class="col-sm-8">
                             <h4>新增开通城市</h4>
                             <div class="form-group">
-                                <label class="col-sm-2 control-label">城市<span class="form_label_dangus">*</span></label>
+                                <label class="col-sm-2 control-label">城市<span class="form_label_danger">*</span></label>
                                 <p class="form-control-static col-sm-4" ng-bind="param.city_name"></p>
                                 <div class="col-sm-4">
                                     <angucomplete-alt
