--- a/app/scripts/views/biz/survey_question/update.html
+++ b/app/scripts/views/biz/survey_question/update.html
@@ -51,7 +51,7 @@
 
                         <div class="form-group" ng-if="param.option_type == 3">
                             <label class="col-sm-2 control-label">答案选项<span
-                                    class="form_label_dangus">*</span></label>
+                                    class="form_label_danger">*</span></label>
                             <div class="col-sm-8">
                                 <table class="table table-bordered table-striped">
                                     <thead>
