--- a/app/scripts/views/directive/pintuan_order_list.html
+++ b/app/scripts/views/directive/pintuan_order_list.html
@@ -6,7 +6,7 @@
         <div class="modal-body">
             <form class="form-horizontal">
                 <div class="form-group">
-                    <label class="col-sm-3 control-label">取消原因<span class="form_label_dangus">*</span></label>
+                    <label class="col-sm-3 control-label">取消原因<span class="form_label_danger">*</span></label>
 
                     <div class="col-sm-6">
                     <textarea class="form-control" rows="3" id="reason" ng-model="reason" placeholder="结束原因">
@@ -14,7 +14,7 @@
                     </div>
                 </div>
                 <!--<div class="form-group">-->
-                <!--<label class="col-sm-3 control-label">取消类型<span class="form_label_dangus">*</span></label>-->
+                <!--<label class="col-sm-3 control-label">取消类型<span class="form_label_danger">*</span></label>-->
 
                 <!--<div class="col-sm-6">-->
                 <!--<div class="radio-inline">-->
