--- a/app/scripts/views/directive/upload/showAddresses.html
+++ b/app/scripts/views/directive/upload/showAddresses.html
@@ -24,7 +24,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label class="col-sm-2 control-label">地址详情
-                                        <span class="form_label_dangus">*</span>
+                                        <span class="form_label_danger">*</span>
                                     </label>
                                     <div class="col-sm-8">
                                         <input class="form-control" type="text" ng-model="v.detail_address"
