--- a/app/scripts/views/biz/merchant/update.html
+++ b/app/scripts/views/biz/merchant/update.html
@@ -25,7 +25,7 @@
                              required="true"></div>
                         <div class="form-group">
                             <div class="form_element"><label class="col-sm-2 control-label">登录密码
-                                <span class="form_label_dangus"
+                                <span class="form_label_danger"
                                       ng-bind="!$stateParams.merchant_id?'*':'&nbsp;'">*</span></label>
                                 <div class="col-sm-4 ">
                                     <input class="form-control" ng-model="param.account.userpass" placeholder="登录密码"
