--- a/app/scripts/views/live/special/activities.html
+++ b/app/scripts/views/live/special/activities.html
@@ -1,4 +1,27 @@
 <div class="dashboard-page ">
+    <style type="text/css">
+        .dndsimpleSubject .dndDragging {
+            opacity: 0.7;
+        }
+
+        .dndsimpleSubject .dndDraggingSource {
+            display: none;
+        }
+
+        .dndsimpleSubject .dndPlaceholder {
+            background-color: #ddd;
+            height: 70px;
+            border: 1px solid #ddd;
+            padding-left: 5px;
+            padding-right: 5px;
+        }
+
+        .dndsimpleSubject .selected {
+            background-color: #dff0d8;
+            color: #3c763d;
+            width: 100%;
+        }
+    </style>
     <div class="panel panel-primary">
         <div class="panel-heading">
             <h3 class="panel-title" ng-bind="title"></h3>
@@ -19,10 +42,38 @@
                      ajax-config="{method:'get',url:$root.common.live_domain+'/live/special/activity/details/?id='+id}"
                      ng-model="id" callback="add_activity_detail(json)"></div>
 
-                <div form-table text="专题列表" ng-model="param.details" config="{add:false}"
-                     columns="[{'name': '专题ID', 'field': 'id',disabled:'true'},
-                     {'name': '专题题目', 'field': 'title',disabled:'true'}
-                     ]"></div>
+                <div class="row">
+                    <label class="col-sm-2 control-label">专题列表&nbsp;&nbsp;</label>
+                    <div class="col-sm-8">
+                        <ul class="list-group dndsimpleSubject" dnd-list="param.details">
+
+                            <li class="list-group-item" ng-repeat="(key,item) in param.details"
+                                dnd-draggable="item" dnd-moved="param.details.splice(key, 1);" dnd-effect-allowed="move">
+                                <div class="row">
+                                    <div class="col-sm-2">
+                                        <label class="label label-success" ng-bind="'第 '+($index+1)"></label>
+                                    </div>
+                                    <div class="col-sm-10" dnd-nodrag>
+                                        <div class="col-sm-2">
+                                            <input class="form-control" ng-model="item.id" ng-disabled="true">
+                                        </div>
+                                        <div class="col-sm-8">
+                                            <input class="form-control" ng-model="item.title" ng-disabled="true">
+                                        </div>
+                                        <div class="col-sm-2">
+                                            <a class="btn btn-danger btn-bordered btn-xs pull-right" ng-click="param.details.splice($index, 1);">
+                                                <span class="glyphicon glyphicon-trash"></span>删除
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="list-group-item dndPlaceholder">
+                                <div class="text-center"><h3 class="red">拖拽到这里</h3></div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
 
                 <div form-radio text="状态" ng-model="param.status" default="" source="[{text:'上线',value:'1'},{text:'下线',value:'2'}]"></div>
 
