描述限制 写一下

--- a/app/scripts/views/live/special/activities.html
+++ b/app/scripts/views/live/special/activities.html
@@ -33,8 +33,9 @@
 
                 <div form-radio text="类型" ng-model="param.type" default="" source="[{text:'专题组',value:'1'}]"></div>
 
-                <div form-image-single ng-model="param.small_pic_url" text="小图" required="true"></div>
+                <div form-image-single ng-model="param.small_pic_url" text="小图标" required="true"></div>
 
+                <h4 class="text-danger col-sm-offset-2 col-sm-10">头图尺寸 690*160 </h4>
                 <div form-image-single ng-model="param.head_pic_url" text="头图" required="true"></div>
 
 
