--- a/app/scripts/views/live/special/specialDetailContentList.html
+++ b/app/scripts/views/live/special/specialDetailContentList.html
@@ -77,7 +77,10 @@
                     <div class="col-sm-2">
                         <label class="label label-success" ng-bind="'第 '+($index+1)"></label>
                     </div>
-                    <div class="col-sm-10" dnd-nodrag>
+                    <div class="col-sm-1" dnd-nodrag>
+                        <label class="label label-success" ng-bind="item.padding==1?'有上边框':''"></label>
+                    </div>
+                    <div class="col-sm-9" dnd-nodrag>
                         <div class="row" ng-if="item.type == 1">
                             <span> 文本内容 </span>
                         </div>
