--- a/app/scripts/views/live/special/activityDetail.html
+++ b/app/scripts/views/live/special/activityDetail.html
@@ -6,9 +6,9 @@
         <div class="panel-body">
             <form class="form-horizontal" name="FormBody" novalidate>
 
-                <div form-input ng-model="param.title" text="标题" required="true" max="10" placeholder="简介最多10个字"></div>
+                <div form-input ng-model="param.title" text="标题" required="true" maxlength="10" placeholder="标题最多10个字"></div>
 
-                <div form-input ng-model="param.briefing" text="简介" required="true" max="26" placeholder="简介最多26个字"></div>
+                <div form-input ng-model="param.briefing" text="简介" required="true" maxlength="26" placeholder="简介最多26个字"></div>
 
                 <h4 class="text-danger col-sm-offset-2 col-sm-10">头图尺寸 690*318 </h4>
                 <div form-image-single ng-model="param.head_pic_url" text="头图" required="true"></div>
