--- a/app/scripts/views/live/special/activities.html
+++ b/app/scripts/views/live/special/activities.html
@@ -58,7 +58,8 @@
                                     </div>
                                     <div class="col-sm-10" dnd-nodrag>
                                         <div class="col-sm-2">
-                                            <input class="form-control" ng-model="item.id" ng-disabled="true">
+                                            <div modal-textarea title="{{item.id}}"
+                                                 content="$root.common.wx_domain+'/subjectApp?activity_id='+param.id+'&detail_id='+item.id+'&#!/subjectAppDetail'"></div>
                                         </div>
                                         <div class="col-sm-8">
                                             <input class="form-control" ng-model="item.title" ng-disabled="true">
