头图取消必填

--- a/app/scripts/views/live/special/activities.html
+++ b/app/scripts/views/live/special/activities.html
@@ -38,7 +38,7 @@
                 <div form-image-single ng-model="param.small_pic_url" text="小图标" required="true"></div>
 
                 <h4 class="text-danger col-sm-offset-2 col-sm-10">头图尺寸 690*160 </h4>
-                <div form-image-single ng-model="param.head_pic_url" text="头图" required="true"></div>
+                <div form-image-single ng-model="param.head_pic_url" text="头图"></div>
 
 
                 <div form-search text="查询专题ID" verify="verify_activity_detail(id)" btn-text="添加"
